tests/baselines/reference/recursiveInheritance.errors.txt
==== tests/cases/compiler/recursiveInheritance.ts (2 errors) ====
    
    interface I5 extends I5 { // error
              ~~
!!! recursiveInheritance.ts(2,11): error TS2101: Interface 'I5' is recursively referenced as a base type of itself.
        foo():void;
    } 
    
    interface i8 extends i9 { } // error
              ~~
!!! recursiveInheritance.ts(6,11): error TS2101: Interface 'i8' is recursively referenced as a base type of itself.
    interface i9 extends i8 { } // error
    